--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "firebase": "^10.14.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
