--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "firebase": "^10.14.0",
+    "firebase-tools": "^13.21.0",
+    "js-md5": "^0.8.3",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
