--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "@emailjs/browser": "^4.4.1",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "datatables.net-bs5": "^2.1.8",
+    "datatables.net-buttons-dt": "^3.1.2",
+    "datatables.net-dt": "^2.1.8",
+    "datatables.net-responsive-dt": "^3.0.3",
+    "datatables.net-select-dt": "^2.1.0",
+    "datatables.net-vue3": "^3.0.2",
     "firebase": "^10.14.0",
     "firebase-tools": "^13.21.0",
+    "jquery": "^3.7.1",
     "js-md5": "^0.8.3",
+    "pdfmake": "^0.2.13",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
