--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "datatables.net-bs5": "^2.1.8",
@@ -18,7 +20,10 @@
     "datatables.net-responsive-dt": "^3.0.3",
     "datatables.net-select-dt": "^2.1.0",
     "datatables.net-vue3": "^3.0.2",
+    "express": "^4.21.1",
     "firebase": "^10.14.0",
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1",
     "firebase-tools": "^13.21.0",
     "jquery": "^3.7.1",
     "js-md5": "^0.8.3",
